<resources>
    <string name="app_name">Gotify</string>
    <string name="app_name_release">Gotify</string>
    <string name="app_name_debug">Gotify Debug</string>
    <string name="notification_channel_id">gotify_channel</string>
    <string name="notification_channel_name">Gotify 推送</string>
    <string name="notification_channel_description">用于接收 Gotify 服务器的推送消息</string>
    <string name="file_provider_authority">com.github.gotify.fileprovider</string>

    <string name="all_messages">全部消息</string>
    <string name="push_message">发送消息</string>
    <string name="logs">日志</string>
    <string name="logout">注销登录</string>
    <string name="title_activity_initialization">初始化</string>
    <string name="title_activity_logs">日志</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_messages">消息</string>

    <string name="navigation_drawer_open">打开导航</string>
    <string name="navigation_drawer_close">关闭导航</string>
    <string name="nav_header_desc">导航头</string>

    <string name="found_gotify_version">发现 Gotify 版本 v%s</string>
    <string name="version_failed_status_code">请求 \'%1$s\' 失败，状态码 %2$d</string>
    <string name="version_failed">请求 \'%1$s\' 失败。%2$s。</string>
    <string name="wronguserpw">用户名或密码错误</string>
    <string name="login">登录</string>
    <string name="check_url">检查 URL</string>
    <string name="enter_url">请输入 URL</string>
    <string name="enter_username">请输入用户名</string>
    <string name="enter_password">请输入密码</string>
    <string name="url">Gotify URL</string>
    <string name="gotify_url">Gotify URL</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="logging_in">登录中...</string>

    <string name="disabled_validate_ssl">禁用 SSL 验证</string>
    <string name="select_ca_certificate">选择 CA 证书</string>
    <string name="select_client_certificate">选择客户端证书 (PKCS#12)</string>
    <string name="select_ca_file">选择 CA 文件</string>
    <string name="select_client_file">选择客户端证书文件</string>
    <string name="client_cert_password">证书密码</string>
    <string name="client_cert_password_missing">需要密码</string>
    <string name="please_install_file_browser">请先安装文件管理器</string>
    <string name="select_ca_failed">读取 CA 失败: %s</string>
    <string name="select_client_failed">读取证书失败: %s</string>
    <string name="certificate_found">发现证书</string>
    <string name="no_certificate_selected">未选择证书</string>
    <string name="remove_ca_certificate">移除 CA 证书</string>
    <string name="remove_client_certificate">移除客户端证书</string>
    <string name="advanced_settings">高级设置</string>
    <string name="advanced_settings_title">高级设置</string>

    <string name="create_client_title">设备名称</string>
    <string name="create_client_message">请为当前设备取个名字</string>
    <string name="create">创建</string>
    <string name="cancel">取消</string>
    <string name="create_client_failed">设备注册失败</string>
    <string name="created_client">设备已注册</string>

    <string name="retry">重试</string>
    <string name="oops">哎呀</string>
    <string name="not_available">无法连接到 %s</string>
    <string name="auth_failed">服务器认证失败(401)。可能是设备被删除了。</string>
    <string name="other_error">无法获取用户。服务器 (%1$s) 返回码 %2$d: %3$s</string>
    <string name="user_action">需要用户操作</string>
    <string name="websocket_closed_logout">Token 已失效，请重新登录。</string>
    <string name="websocket_closed">连接已关闭</string>
    <string name="websocket_error">错误 %s (查看日志)</string>
    <string name="websocket_reconnect">尝试重连中...</string>
    <string name="websocket_listening">已连接</string>
    <string name="websocket_init">初始化中</string>
    <plurals name="websocket_retry_interval">
        <item quantity="one">%d 分钟后重试</item>
        <item quantity="other">%d 分钟后重试</item>
    </plurals>

    <string name="grouped_message">断开期间收到 %d 条消息</string>
    <string name="delete_all">清空所有消息</string>
    <string name="delete_app">删除应用</string>
    <string name="error_delete_app">删除应用失败</string>
    <string name="delete_logs">删除日志</string>
    <string name="copy_logs">复制日志</string>
    <string name="logs_copied">日志已复制</string>
    <string name="snackbar_deleted">消息已删除</string>
    <string name="snackbar_undo">撤销</string>
    <string name="message_image_desc">消息图片</string>
    <string name="delete_message">删除消息</string>
    <string name="refresh_all">刷新全部</string>
    <string name="missed_messages">错过的消息</string>
    <string name="grouped_notification_text">新消息</string>
    <string name="versions">gotify/android v%1$s; gotify/server v%2$s</string>
    <string name="done">完成</string>
    <string name="copy">复制</string>
    <string name="delete">删除</string>
    
    <string name="no_messages_yet"></string> 
    <string name="intro_1"></string>
    <string name="intro_2"></string>
    <string name="intro_3"></string>

    <string name="permissions_dialog_grant">授权</string>
    <string name="permissions_notification_denied_temp">Gotify 需要通知权限。</string>
    <string name="permissions_notification_denied_permanent">请在设置中授予 Gotify 通知权限。</string>
    <string name="permissions_alarm_prompt">Gotify 需要权限以在断开连接后安排重连。</string>
    <string name="gotify_logo">Gotify 图标</string>
    <string name="logout_confirm">确定要注销吗？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="ack">确认操作？</string>
    <string name="warning">警告</string>
    <string name="http_warning">使用 HTTP 不安全，建议使用 HTTPS。</string>
    <string name="i_understand">我已知晓</string>

    <string name="settings_appearance">外观</string>
    <string name="setting_theme">主题</string>
    <string name="setting_theme_title">主题风格</string>
    <string name="setting_theme_auto">跟随系统</string>
    <string name="setting_theme_dark">深色模式</string>
    <string name="setting_theme_light">浅色模式</string>
    <string name="setting_message_layout">消息布局</string>
    <string name="setting_message_layout_title">显示方式</string>
    <string name="setting_message_layout_normal">默认</string>
    <string name="setting_message_layout_compact">紧凑</string>
    <string name="setting_restart_dialog_title">重启应用？</string>
    <string name="setting_restart_dialog_message">更改将在下次启动时生效。\n\n要现在重启吗？</string>
    <string name="setting_restart_dialog_button1">重启</string>
    <string name="setting_restart_dialog_button2">稍后</string>
    <string name="setting_time_format">时间格式</string>
    <string name="setting_notifications">通知</string>
    <string name="setting_notification_channels">独立应用通知通道</string>
    <string name="setting_exclude_from_recent">隐藏任务</string>
    <string name="setting_exclude_from_recent_title">隐藏任务</string>
    <string name="setting_exclude_from_recent_summary">从“最近任务”列表中隐藏此 App</string>
    <string name="setting_intent_dialog_permission">Intent 动作权限</string>
    <string name="setting_summary_intent_dialog_permission">允许 App 在其他应用之上显示以处理 Intent URL。</string>
    <string name="setting_summary_intent_dialog_permission_granted">权限已授予。</string>
    <string name="setting_prompt_onreceive_intent">Intent 确认</string>
    <string name="setting_summary_prompt_onreceive_intent">开启后，执行 Intent URL 前会显示确认框。</string>
    <string name="setting_inverse_message_order_title">消息倒序</string>
    <string name="setting_inverse_message_order_summary">新消息显示在底部</string>
    <string name="setting_group_message_layout">布局设置</string>

    <string name="appListDescription">应用:</string>
    <string name="priorityDescription">优先级:</string>
    <string name="push_button">发送</string>
    <string name="push_title_hint">标题</string>
    <string name="push_content_hint">内容</string>
    <string name="push_priority_hint">优先级</string>
    <string name="push_missing_app_info">服务器上没有可用于推送的应用。</string>
    <string name="message_copied_to_clipboard">内容已复制</string>
    <string name="not_loggedin_share">无法分享，因为尚未登录。</string>
    <string name="action_dialog_missing">缺少 URL</string>
    <string name="action_dialog_message">收到带有 URL 的消息:</string>
    <string name="action_dialog_button_open">打开</string>
    <string name="action_dialog_button_cancel">取消</string>

    <string name="share_title">发送内容</string>
    <string name="share_content">内容</string>
    <string name="share_sending">发送中...</string>
    <string name="share_success">发送成功</string>
    <string name="share_failed">发送失败</string>
    
    <string name="log_copy">复制日志</string>
    <string name="log_clear">清空日志</string>
    <string name="message_image_content_description">图片</string>
    <string name="date_pattern">yyyy-MM-dd HH:mm</string>
    <string name="group_header_yesterday">昨天</string>
    <string name="group_header_today">今天</string>

    <string name="notification_channel_title_foreground">Gotify 前台服务</string>
    <string name="notification_channel_title_min">最低优先级消息 (&lt;1)</string>
    <string name="notification_channel_title_low">低优先级消息 (1–3)</string>
    <string name="notification_channel_title_normal">普通优先级消息 (4–7)</string>
    <string name="notification_channel_title_high">高优先级消息 (>7)</string>

    <string name="setting_key_theme" translatable="false">theme</string>
    <string name="setting_key_message_layout" translatable="false">message_layout</string>
    <string name="setting_key_time_format" translatable="false">time_format</string>
    <string name="setting_key_notification_channels" translatable="false">notification_channels</string>
    <string name="setting_key_exclude_from_recent" translatable="false">exclude_from_recent</string>
    <string name="setting_key_intent_dialog_permission" translatable="false">intent_dialog_permission</string>
    <string name="setting_key_prompt_onreceive_intent" translatable="false">prompt_onreceive_intent</string>
    <string name="setting_key_inverse_message_order" translatable="false">inverse_message_order</string>
</resources>
