<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/apps" android:checkableBehavior="single"/>
    
    <item
        android:id="@+id/nav_all_messages"
        android:icon="@android:drawable/ic_menu_view" 
        android:title="@string/all_messages"/>
        
    <item
        android:id="@+id/push_message"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/push_message"
        android:visible="false"/>
        
    <item
        android:id="@+id/nav_logs"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/title_activity_logs"/>
        
    <item
        android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/title_activity_settings"/>
        
    <item
        android:id="@+id/logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/logout"/>
</menu>
